k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: never-ending-web
  namespace: never-ending
spec:
  replicas: 1
  selector:
    matchLabels:
      app: never-ending-web
  template:
    metadata:
      labels:
        app: never-ending-web
    spec:
      containers:
        - name: web
          image: registry.alk.pw/never-ending/web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
