k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: never-ending-web
  namespace: never-ending
spec:
  type: ClusterIP
  selector:
    app: never-ending-web
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
