k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: never-ending-ingress
  namespace: never-ending
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - reads.alk.pw
      secretName: reads-alk-pw-tls
    - hosts:
        - never-ending.space
      secretName: never-ending-space-tls
  rules:
    - host: reads.alk.pw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: never-ending-web
                port:
                  number: 3000
    - host: never-ending.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: never-ending-web
                port:
                  number: 3000
